<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_house"
        android:title="@string/title_house" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_circle"
        android:icon="@drawable/ic_circle"
        android:title="@string/title_circle" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_alert"
        android:title="@string/title_alert" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_android"
        android:title="@string/title_android" />

</menu>
